--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Dashboard</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    
 </head>
 <body>
-    <nav>
+    <section class="nav">
         <span>
             <h1>Zarss</h1>
         <img src="./img/logo.img" alt="">
@@ -17,42 +19,51 @@
         </span>
         <ul>
             <li>
-                <a href="#"><i class="fa-solid fa-chart-pie"></i> Dashboard</a>
+                <i class="fa-solid fa-chart-pie"></i>
+                <a href="#"> Dashboard</a>
             </li>
 
             <li>
-                <a href="#"><i class="fa-solid fa-chart-line"></i> Statistics</a>
+                <i class="fa-solid fa-chart-line"></i>
+                <a href="#"> Statistics</a>
             </li>
 
             <li>
-                <a href="#"><i class="fa-solid fa-wallet"></i> Payment</a>
+                <i class="fa-solid fa-wallet"></i> 
+                <a href="#">Payment</a>
             </li>
 
             <li>
-                <a href="#"><i class="fa-solid fa-address-book"></i> Transactions</a>
+                <i class="fa-solid fa-address-book"></i>
+                <a href="#"> Transactions</a>
             </li>
 
             <li>
-                <a href="#"><i class="fa-brands fa-product-hunt"></i> Products</a>
+                <i class="fa-brands fa-product-hunt"></i>
+                <a href="#"> Products</a>
             </li>
 
             <li>
-                <a href="#"><i class="fa-solid fa-users"></i> Customer</a>
+                <i class="fa-solid fa-users"></i> 
+                <a href="#">Customer</a>
             </li>
 
             <li>
-                <a href="#"><i class="fa-solid fa-message"></i> Messages</a>
+                <i class="fa-solid fa-message"></i>
+                <a href="#"> Messages</a>
             </li>
 
             <li>
-                <a href="#"><i class="fa-solid fa-gear"></i> Settings</a>
+                <i class="fa-solid fa-gear"></i>
+                <a href="#"> Settings</a>
             </li>
 
             <li>
-                <a href="#"><i class="fa-solid fa-right-from-bracket"></i> LogOut</a>
+                <i class="fa-solid fa-right-from-bracket"></i>
+                <a href="#"> LogOut</a>
             </li>
         </ul>
-    </nav>
+    </section>
 
     <section class="container">
         <div class="div_1">
