Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -106,6 +106,26 @@
                 <p>chargeback</p>
                 <P>11 Sep 2022</P>
             </div>
+
+            <div class="box_2">
+                <span style="display: flex; align-items: center; gap: 10px;">
+                    <img src="./img/img.png" alt="">
+                <p>David Astee</p>
+                </span>
+                <p>$1,456</p>
+                <p>chargeback</p>
+                <P>11 Sep 2022</P>
+            </div>
+
+            <div class="box_2">
+                <span style="display: flex; align-items: center; gap: 10px;">
+                    <img src="./img/img.png" alt="">
+                <p>David Astee</p>
+                </span>
+                <p>$1,456</p>
+                <p>chargeback</p>
+                <P>11 Sep 2022</P>
+            </div>
         </div>
         <div class="div_2">
             <div class="side1">
